--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,9 +1,10 @@
 :root {
-  --color-3: #b5f4ff;
-  --color-4: #8ceaff;
-  --color-5: #61dafb;
-  --color-6: #48b1d4;
-  --color-7: #328bad;
+  --color-3: #6bbbc9;
+  --color-4: #46a7bd;
+  --color-5: #087ea4;
+  --color-6: #087ea4;
+  --color-7: #005a7d;
+  --color-vue:#42b883;
   --vp-c-brand: var(--color-5);
   --vp-c-brand-light: var(--color-5);
   --vp-c-brand-dark: var(--color-4);
@@ -12,15 +13,7 @@
   --vp-button-brand-hover-bg: var(--color-4);
   --vp-home-hero-name-color: var(--color-5);
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: linear-gradient(
-    120deg,
-    var(--color-5),
-    var(--color-7)
-  );
-  --vp-home-hero-image-background-image: linear-gradient(
-    -45deg,
-    var(--color-5),
-    var(--color-3)
-  );
-  --vp-home-hero-image-filter: blur(80px);
+  --vp-home-hero-name-background: linear-gradient(90deg, rgba(66,184,131,1) 0%, rgba(8,126,164,1) 50%);
+;
 }
+// https://lingdaima.com/jianbianse/
